# AutoSocial-Ai

./: .env.example  .gitattributes  .gitignore  README.md  README_BILINGUAL.md  autosocial.db.bak  autosocial.db.bak.1771620715  find_instagram_id_alternative.py  pyproject.toml  pyrightconfig.json  refresh_instagram_token.py  requirements.txt
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
app/api/: routes.py
app/assets/fonts/: README.md
app/services/: content_ai.py  image_backend.py  image_render.py  instagram.py  monetization.py  r2_storage.py  scheduled_publisher.py  scheduler.py  scheduler_api.py  storage_backend.py  storage_service.py  trend_radar.py  visual_ai.py
frontend/: app.js  index.html  styles.css
scripts/: check_scheduled_dt.py  cleanup_duplicates.py  debug_list_posts.py  fix_statuses.py  list_posts.py  refresh_token.py  show_automation.py
tools/: add_automation_time_columns.py  add_db_columns.py  approve_and_schedule_post8.py  check_scheduled_at.py  db_normalize_r2.py  db_normalize_r2_fixed.py  ensure_remote_uploads.py  fix_image_urls.py  fix_r2_urls.py  fix_r2_urls_run.py  force_approve_and_schedule_post8.py  list_posts.py  list_posts_db.py  make_story_from_last_post.py  publish_post8.py  publish_post8_once.py  regenerate_posts.py  reupload_to_r2.py  run_generate.py  run_scheduled_check.py  schedule_last_story.py  scheduled_check_runner.py  set_post8_approved.py  show_posts_columns.py  update_db_r2_urls.py
worker/: tasks.py
